syntax = "proto3";

package notification;

option go_package = "github.com/suyashXD/Timeline-Service/internal/grpc/proto/notification";

// Message to request posts by a specific user
message ListPostsRequest {
  string user_id = 1;  // The ID of the user whose posts we want
}

// A single post object
message Post {
  string id = 1;        // Unique ID of the post
  string author_id = 2; // Who made the post
  string content = 3;   // Post content
  int64 timestamp = 4;  // Unix timestamp (for sorting)
}

// Response that returns multiple posts
message ListPostsResponse {
  repeated Post posts = 1; // List of posts from the requested user
}

// The gRPC service definition
service PostService {
  // Fetch posts made by a specific user
  rpc ListPostsByUser (ListPostsRequest) returns (ListPostsResponse);
}
